[tool.poetry]
name = "neuralnetwork-viterbi"
version = "0.1.0"
description = "NeuralNetwork-Viterbi: A Framework for Weakly Supervised Video Learning"
authors = ["Alexander Richard <richard@iai.uni-bonn.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
torch = "^1.0.2"
numpy = "^1.21.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
